# mim

./: .gitmodules  Cargo.toml  LICENSE  README.md
.debug/: trace.txt
.github/workflows/: test.yaml
data/: constraint-sizes.md
exp/constraints/: constraints.txt
exp/lmf/: experiment_results_mem.json  experiment_results_time.json
exp/nova-merkle-forest/: experiment_config_128_1024.json  experiment_config_256_1024.json  experiment_config_512_1024.json  experiment_folding_results_time_128_1024.json  experiment_folding_results_time_256_1024.json  experiment_folding_results_time_512_1024.json  experiment_results_mem_128_1024.json  experiment_results_mem_256_1024.json  experiment_results_mem_512_1024.json  experiment_results_time_128_1024.json  experiment_results_time_256_1024.json  experiment_results_time_512_1024.json
exp/nova-no-merkle/: experiment_config.json  experiment_config_128.json  experiment_config_256.json  experiment_config_512.json  experiment_folding_results_time_128.json  experiment_folding_results_time_256.json  experiment_folding_results_time_512.json  experiment_results_mem_128.json  experiment_results_mem_256.json  experiment_results_mem_512.json  experiment_results_time_128.json  experiment_results_time_256.json  experiment_results_time_512.json
scripts/: log.sh
sig/: Cargo.toml
sig/benches/: README.md  bls_pairing.rs  bls_r1cs_constraints.rs  constraints.rs  ext_folding_merkle_forest.rs  ext_folding_no_merkle.rs  ext_nova_folding_merkle_forest_mem.rs  ext_nova_folding_merkle_forest_time.rs  ext_nova_folding_no_merkle.rs  ext_nova_folding_no_merkle_mem.rs  ext_nova_folding_no_merkle_time.rs  folding_merkle_forest.rs  folding_no_merkle.rs  groth16.rs  groth16_single_step_emulation.rs  groth16_single_step_native.rs  lmf_mem.rs  lmf_time.rs  nova_folding_merkle_forest.rs  nova_folding_no_merkle.rs  utils.rs
sig/benches/archives/: bls_pairing.rs  bls_r1cs_constraints.rs  groth16_single_step_emulation.rs  nova_folding_no_merkle.rs
sig/benches/utils/: ext.rs  mod.rs
sig/src/: lib.rs  main.rs  params.rs
sig/src/bc/: block.rs  checkpoints.rs  mod.rs  params.rs
sig/src/bls/: bls.rs  circuit.rs  mod.rs  params.rs  r1cs.rs  snark.rs
sig/src/folding/: bc.rs  circuit.rs  from_constraint_field.rs  mod.rs  params.rs  serialize.rs  to_constraint_field.rs
sig/src/hash/: hash_to_curve.rs  mod.rs
sig/src/hash/hash_to_curve/: hash_to_field.rs  mod.rs
sig/src/hash/hash_to_curve/cofactor/: bls12_377.rs  bls12_381.rs  mod.rs
sig/src/hash/hash_to_field/: default_hasher.rs  expander.rs  from_base_field.rs  mod.rs
sig/src/hash/hash_to_field/poseidon/: mod.rs
sig/src/hash/map_to_curve/: isogeny_map.rs  mod.rs  norm.rs  sqrt.rs  swu.rs  to_base_field.rs  wb.rs
sig/src/hash/poseidon/: mod.rs
sig/src/hash/prf/: constraints.rs  mod.rs
sig/src/hash/prf/blake2s/: constraints.rs
sig/src/hash_to_curve/: hash_to_curve.rs  hash_to_field.rs  map_to_curve.rs
sig/src/merkle/: constraints.rs  forest.rs  mod.rs  tree.rs
sig/src/tests/: ark_r1cs_std_test.rs  limb_sizes.rs  mod.rs
