[workspace]
resolver = "2"
exclude = ["./third_party/"]

members = [
    "sig"
]

[patch.crates-io]
ark-r1cs-std = { path = "./third_party/r1cs-std" }
ark-crypto-primitives = { path = "./third_party/crypto-primitives" }
ark-ff = { path = "./third_party/ark-ff" }

[profile.dev-debug]
inherits = "dev"
opt-level = 3
debug = true
lto = "thin"
strip = "none"