[package]
name = "sig"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-377 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-bw6-761 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["r1cs", "prf", "parallel"] }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = { version = "0.5.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.5.0", features = ["parallel"] }
ark-relations = "0.5.1"
ark-snark = "0.5.1"
array-util = "1.0.2"
arrayvec = "0.7.6"
blake2 = "0.10.6"
rand = "0.8.5"
tracing = "0.1.41"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde = "*"
test-fuzz = "*"
tracing-subscriber = "0.3.19"

[[bench]]
name = "bls_pairing"
harness = false
