[package]
name = "sig"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-377 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [
    "crh",
    "parallel",
    "r1cs",
] }
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-groth16 = { version = "0.5.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.5.0", features = ["parallel"] }
ark-relations = "0.5.1"
ark-serialize = { version = "0.5.0", features = ["parallel"] }
ark-std = { version = "0.5.0", features = ["parallel"] }
array-util = "1.0.2"
arrayvec = "0.7.6"
bincode = "1.3.3"
blake2 = "0.10.6"
delegate = "0.13.2"
derivative = "2.2.0"
# right now, can only use the following
# but once the generic bound can be ignored, we can derive a wide range of traits
# see: https://github.com/JelteF/derive_more/issues/439
derive_more = { version = "2", features = ["from", "into", "as_ref"] }
either = "1.15.0"
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes" }
gen_ops = "0.4.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
ark-bw6-761 = "0.5.0"
ark-mnt4-298 = { version = "0.5.0", features = ["r1cs"] }
ark-mnt6-298 = { version = "0.5.0", features = ["r1cs"] }
ark-mnt4-753 = { version = "0.5.0", features = ["r1cs"] }
ark-mnt6-753 = { version = "0.5.0", features = ["r1cs"] }
ark-snark = "0.5.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
memmap2 = "0.9.5"
rayon = "1.10.0"
serde_json = "1.0.140"
sysinfo = "=0.34.2"
tracing-subscriber = "0.3.19"
tracing-tree = "0.4.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
tikv-jemalloc-ctl = {version = "0.6.0", features = ["stats"]}

[[bench]]
name = "bls_pairing"
path = "benches/archives/bls_pairing.rs"
harness = false

[[bench]]
name = "bls_r1cs_constraints"
path = "benches/archives/bls_r1cs_constraints.rs"
harness = false  # optional, only if you're not using the standard test harness

[[bench]]
name = "groth16_single_step_native"
path = "benches/archives/groth16_single_step_native.rs"
harness = false

[[bench]]
name = "groth16_single_step_emulation"
path = "benches/archives/groth16_single_step_emulation.rs"
harness = false

[[bench]]
name = "nova_folding_no_merkle"
path = "benches/archives/nova_folding_no_merkle.rs"
harness = false

[[bench]]
name = "ext_nova_folding_no_merkle_time"
harness = false

[[bench]]
name = "ext_nova_folding_no_merkle_mem"
harness = false

[[bench]]
name = "ext_nova_folding_merkle_forest_time"
harness = false

[[bench]]
name = "ext_nova_folding_merkle_forest_mem"
harness = false

[[bench]]
name = "lmf_time"
harness = false

[[bench]]
name = "lmf_mem"
harness = false

[[bench]]
name = "constraints"
harness = false

[[bench]]
name = "folding_no_merkle"
harness = false

[[bench]]
name = "folding_merkle_forest"
harness = false
